# ouros

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
crates/ouros/: Cargo.toml
crates/ouros-cli/: Cargo.toml
crates/ouros-cli/src/: main.rs
crates/ouros-js/: .gitignore  Cargo.toml  README.md  index-header.d.ts  monty.wasi.cjs  package-lock.json  package.json  session.d.ts  session.d.ts.map  session.js  session.js.map  session.ts  tsconfig.json  wrapper.ts
crates/ouros-js/__test__/: async.spec.ts  basic.spec.ts  exceptions.spec.ts  external.spec.ts  inputs.spec.ts  limits.spec.ts  serialize.spec.ts  session_manager.spec.ts  start.spec.ts  type_check.spec.ts  types.spec.ts
crates/ouros-js/scripts/: smoke-test.sh
crates/ouros-js/smoke-test/: package.json  test.ts  tsconfig.json
crates/ouros-js/src/: convert.rs  exceptions.rs  lib.rs  limits.rs  ouros_cls.rs  session_manager.rs
crates/ouros-mcp/: Cargo.toml
crates/ouros-mcp/src/: handler.rs  lib.rs  main.rs
crates/ouros-mcp/tests/: mcp_resume_variant_aliases_tests.rs  mcp_tools_tests.rs
crates/ouros-python/: Cargo.toml  README.md  example.py  exercise.py  pyproject.toml
crates/ouros-python/python/ouros/: __init__.py  _ouros.pyi  os_access.py  session.py
crates/ouros-python/src/: convert.rs  dataclass.rs  exceptions.rs  external.rs  lib.rs  limits.rs  ouros_cls.rs  session_manager.rs
crates/ouros-python/tests/: test_async.py  test_basic.py  test_dataclasses.py  test_exceptions.py  test_external.py  test_inputs.py  test_limits.py  test_os_access.py  test_os_access_compat.py  test_os_access_raw.py  test_os_calls.py  test_print.py  test_readme_examples.py  test_serialize.py  test_session_manager.py  test_start.py  test_threading.py  test_type_check.py  test_types.py
crates/ouros-type-checking/: Cargo.toml
crates/ouros-type-checking/src/: db.rs  lib.rs  type_check.rs
crates/ouros-type-checking/tests/: bad_types.py  bad_types_output.txt  main.rs  reveal_types.py  reveal_types_output.txt
crates/ouros/benches/: arithmetic_non_foldable.rs  main.rs
crates/ouros/fuzz/: Cargo.toml
crates/ouros/fuzz/corpus/fuzz_parse_only/: abc__metaclass.py  abc__stdlib.py  args__dict_get_too_many.py  args__id_too_many.py  args__list_append_no_args.py  arith__floordiv_zero_float.py  arith__pow_zero_neg.py  assert__ops.py  ast__stdlib.py  async__exception.py  async__not_awaitable.py  async__not_imported.py  async__return_types.py  async__sequential.py  async__traceback.py  atexit__stdlib.py  bisect__stdlib.py  builtin__math_funcs.py  bytes__methods.py  chain_comparison__all.py  classes__decorators.py  classes__descriptors.py  classes__min_property.py  classes__mro_conflict.py  comprehension__all.py  datetime__basic.py  (+107 more)
crates/ouros/fuzz/fuzz_targets/: fuzz_parse_only.rs  fuzz_parse_run.rs
crates/ouros/src/: args.rs  asyncio.rs  capability.rs  exception_private.rs  exception_public.rs  expressions.rs  fstring.rs  function.rs  heap.rs  intern.rs  io.rs  lib.rs  namespace.rs  object.rs  os.rs  parse.rs  prepare.rs  proxy.rs  py_hash.rs  repl.rs  repl_error.rs  resource.rs  run.rs  session_manager.rs  signature.rs  tracer.rs  value.rs  value.rs.bak
crates/ouros/src/builtins/: abs.rs  aiter.rs  all.rs  anext.rs  any.rs  ascii.rs  callable.rs  dir.rs  divmod.rs  enumerate.rs  filter.rs  id.rs  isinstance.rs  map.rs  min_max.rs  mod.rs  pow.rs  print.rs  reversed.rs  round.rs  sorted.rs  sum.rs  type_.rs  zip.rs
crates/ouros/src/bytecode/: builder.rs  code.rs  compiler.rs  mod.rs  op.rs
crates/ouros/src/modules/: abc.rs  argparse_mod.rs  array_mod.rs  asyncio.rs  atexit_mod.rs  base64_mod.rs  binascii_mod.rs  bisect.rs  builtins_mod.rs  cmath_mod.rs  codecs_mod.rs  collections.rs  collections_abc.rs  concurrent_futures.rs  concurrent_mod.rs  contextlib.rs  copy_mod.rs  csv_mod.rs  dataclasses.rs  datetime_mod.rs  decimal_mod.rs  difflib.rs  enum_mod.rs  errno_mod.rs  fnmatch.rs  fractions_mod.rs  functools.rs  gc_mod.rs  hashlib.rs  heapq.rs  html.rs  inspect_mod.rs  io_mod.rs  ipaddress.rs  itertools.rs  json.rs  linecache_mod.rs  logging_mod.rs  math.rs  mod.rs  (+32 more)
crates/ouros/src/types/: bytes.rs  chain_map.rs  class.rs  counter.rs  dataclass.rs  datetime_types.rs  decimal.rs  defaultdict.rs  deque.rs  dict.rs  fraction.rs  functools.rs  generator.rs  generic_alias.rs  iter.rs  list.rs  long_int.rs  mapping_proxy.rs  mod.rs  module.rs  namedtuple.rs  operator_callables.rs  ordered_dict.rs  partial.rs  path.rs  py_trait.rs  range.rs  re_types.rs  set.rs  stdlib_objects.rs  str.rs  textwrap.rs  tuple.rs  type.rs  type.rs.bak  uuid.rs  weakref.rs
crates/ouros/test_cases/: argparse__stdlib.py  args__dict_get_no_args.py  args__dict_keys_with_args.py  args__dict_values_with_args.py  args__len_no_args.py  arith__floordiv_zero_int.py  array__stdlib.py  async__ext_call.py  async__gather_external_exception_caught.py  async__nested_await.py  asyncio__sleep.py  asyncio__stdlib.py  base64__stdlib.py  bench__kitchen_sink.py  binascii__stdlib.py  bool__ops.py  builtin__iter_funcs.py  builtin__more_iter_funcs.py  builtin__string_funcs.py  builtin__vars.py  builtins__coverage.py  bytes__coverage.py  bytes__decode_invalid_utf8.py  bytes__negative_count.py  bytes__ops.py  bytes__startswith_str_error.py  classes__basic.py  classes__coverage.py  classes__dunders.py  classes__metaclass.py  classes__min_decorator.py  classes__scoping.py  classes__simple.py  closure__undefined_nonlocal.py  cmath__stdlib.py  codecs__stdlib.py  collections__abc__stdlib.py  collections__counter_iter.py  collections__ext__stdlib.py  collections__ordereddict_contains.py  (+148 more)
crates/ouros/tests/: asyncio.rs  binary_serde.rs  bytecode_limits.rs  datatest_runner.rs  depth_guard.rs  heap_diff.rs  heap_stats.rs  inputs.rs  json_serde.rs  json_variant_aliases.rs  main.rs  os_tests.rs  parse_errors.rs  print_writer.rs  proxy_tests.rs  py_object.rs  repl_futures.rs  repl_interactive_tests.rs  repl_save_load.rs  repl_tests.rs  resource_limits.rs  session_fork.rs  session_manager_tests.rs  set_variable.rs  try_from.rs  vm_reuse.rs
(+398 files in other folders)
