[package]
name = "ouros-js"
description = "TypeScript/JavaScript bindings for the Ouros sandboxed Python interpreter"
readme = "README.md"
version = { workspace = true }
rust-version = { workspace = true }
# edition = { workspace = true }
edition = "2021"
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
ouros = { path = "../ouros" }
ouros_type_checking = { path = "../ouros-type-checking" }
napi = { version = "3.0.0", default-features = false, features = ["napi6", "compat-mode"] }
napi-derive = "3.0.0"
num-bigint = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
postcard = { workspace = true }

[build-dependencies]
napi-build = "2"

[lints]
workspace = true
