[package]
name = "ouros-python"
description = "Python bindings for the Ouros sandboxed Python interpreter"
readme = "README.md"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
name = "_ouros"
crate-type = ["cdylib"]

[dependencies]
ouros = { path = "../ouros" }
ouros_type_checking = { path = "../ouros-type-checking" }
pyo3 = { version = "0.27.2", features = ["indexmap", "generate-import-lib", "num-bigint"] }
num-bigint = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
postcard = { workspace = true }

[build-dependencies]
pyo3-build-config = { version = "0.27.2", features = ["resolve-config"] }

[features]
# make extensions visible to cargo vendor
extension-module = ["pyo3/generate-import-lib"]

[lints]
workspace = true
