[package]
name = "ouros_type_checking"
readme = "../../README.md"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
name = "ouros_type_checking"
path = "src/lib.rs"

[dependencies]
ouros_typeshed = { path = "../ouros-typeshed" }
ruff_python_ast = { workspace = true }
ruff_db = { workspace = true }
ruff_text_size = { workspace = true }
ty_python_semantic = { workspace = true }
ty_module_resolver = { workspace = true }
salsa = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
