[package]
name = "ouros"
readme = "../../README.md"
version = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
name = "ouros"
path = "src/lib.rs"

[dependencies]
ruff_python_parser = { workspace = true }
ruff_python_ast = { workspace = true }
ruff_text_size = { workspace = true }
ahash = { version = "0.8.0", features = ["serde"] }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { version = "1.0", features = ["preserve_order"] }
postcard = { workspace = true }
strum = { version = "0.27", features = ["derive"] }
hashbrown = "0.16.1"
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
regex = "1"
fancy-regex = "0.14"
smallvec = { version = "1.13", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
rand_chacha = { version = "0.3", features = ["serde1"] }
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
hmac = "0.12"
ripemd = "0.1"
sm3 = "0.4"
scrypt = "0.11"
ryu = "1"
unicode-casefold = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
toml_edit = { version = "0.22", features = ["parse"] }
flate2 = "1.1.5"

[features]
# ref-count-return changes behavior to return information on reference counts to check they're correct
# should be used for testing only
ref-count-return = []
# ref-count-panic enables a Drop implementation on Value which catches heap allocated values that are dropped
# without being dereferenced.
# should be used for testing only
ref-count-panic = []

[dev-dependencies]
pyo3 = { version = "0.27.2", features = ["auto-initialize"] }
# Use codspeed-criterion-compat for CI benchmarks, real criterion for local flamegraphs
codspeed-criterion-compat = "4.2.1"
criterion = "0.5"
datatest-stable = "0.2"
serde_json = "1.0"
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }
similar = "2.7.0"

[[bench]]
name = "main"
harness = false

[[test]]
name = "datatest_runner"
harness = false

[[test]]
name = "session_manager_tests"
path = "tests/session_manager_tests.rs"

[[bin]]
name = "ouros-repl"
path = "src/bin/ouros-repl.rs"

[lints]
workspace = true
